# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  utility.txt
.github/workflows/: page-analyzer.yaml
page_analyzer/: __init__.py  app.py  db_operations.py  parsing.py  url_processing.py
page_analyzer/templates/: base.html  index.html  list_sites.html  page_not_found.html  show_site.html
tests/: __init__.py
